exam admin page update
- update statistics export: add per-task details
- use usernames instead of uuid when listing attempts
- minor fixes
